# shared-ai-platform

./: .env.example  ARCHITECTURE.md  CODE_EXAMPLES.md  DIAGRAMS.md  PROMPTS_SEED.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  main_shared-ai-platform.yml
app/: main.py
app/admin/: router.py
app/ai_router/: __init__.py  middleware.py  router.py  schemas.py
app/analytics/: router.py
app/apps/: router.py
app/auth/: auth_models.py  auth_schemas.py  auth_security.py  auth_service.py  models.py  router.py
app/config/: database.py  redis.py  settings.py
app/jobs/: celery_app.py  embedding_job.py  health_check_job.py  memory_summarize_job.py  usage_aggregation_job.py
app/logging_service/: middleware.py
app/memory/: router.py
app/models_registry/: models.py  router.py
app/orchestration/: router.py  schemas.py
app/prompts/: router.py
app/providers/: __init__.py  base.py  cheap_api.py  ollama.py  premium_api.py
app/rag/: router.py
app/safety/: middleware.py
app/services/ai_routing/: __init__.py  app_rules.py  (+6 more)
app/shared/: exceptions.py
app/templates/: router.py
app/users/: router.py
infra/docker/: Dockerfile  Dockerfile.dev  docker-compose.local.yml  docker-compose.yml
infra/scripts/: seed_db.py  setup_local.sh
migrations/: env.py
migrations/versions/: 0001_create_auth_tables.py
tests/: conftest.py
tests/integration/: test_english_coach_endpoint.py
tests/unit/: test_english_coach_chat.py  test_prompt_renderer.py  test_safety_middleware.py
